--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                     <div id="landing-text-inner">
                         <h1>Berto Site</h1>
                         <h2>baby back bitch berto</h2>
-                        
+                        <a href="https://www.pornhub.com/view_video.php?viewkey=ph5d0c7a86bf8ca" class="btn" id="view-work"></a>
+                            About
+                        </a>
                     </div>
                 </div>
                 <div id="landing-image"></div>
