--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </a>
                     </div>
                 </div>
-                <div id="landing-image"></div>
+                <div id="landing-image"><img src="profile.jpg" alt="if you see this just know you're not supposed to ...'"></div>
             </div>
 
 
