--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>With friends i enjoy playing sports like Basketball and Soccer</p>
             </div>
             <div id="header">
-                <h2>Sports</h2>
+                <h2>Computer Science</h2>
             </div>
             <img src="https://th.bing.com/th/id/OIP.1_qRbsF1nxsbZR4cjoE4TAHaEQ?w=269&h=180&c=7&o=5&pid=1.7" alt="if you see this you're not supposed to ...'">
                 <div class="caption"></div>
