changed font sizes, background color, linked new sheets

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <div id="landing-text-inner">
                         <h1>About me</h1>
                         <h2>Esteban Madrigal</h2>
-                        <a href="https://www.instagram.com/stebie11mad/" class="btn" id="view-work">
-                            instagram
+                        <a href="before.html" class="btn" id="view-work">
+                            Before
                         </a>
                     </div>
                 </div>
