--- a/about-page.html
+++ b/about-page.html
@@ -4,6 +4,8 @@
             <link rel="stylesheet" href="about-page.css">
     </head>
     <body>
-
+        <video controls autoplay width="640" height="480">
+        <source src="http://demo.viewcam.me:8000/++hls?cameraNum=1&auth=dXNlcjpwYXNz" type="application/x-mpegURL">
+        </video>
     </body>
 </html>
