--- a/about-page.html
+++ b/about-page.html
@@ -4,8 +4,6 @@
             <link rel="stylesheet" href="about-page.css">
     </head>
     <body>
-        <video controls autoplay width="640" height="480">
-        <source src="http://demo.viewcam.me:8000/++hls?cameraNum=1&auth=dXNlcjpwYXNz" type="application/x-mpegURL">
-        </video>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/zInGuFSU7yY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
